[gd_scene load_steps=7 format=3 uid="uid://b6lyrmbv1ohcg"]

[ext_resource type="Script" path="res://Scripts/door.gd" id="1_87ua7"]
[ext_resource type="Texture2D" uid="uid://h3yxw1p10cdj" path="res://Assets/sprites/Atlases/Walls/Walls.png" id="2_23i3r"]
[ext_resource type="AudioStream" uid="uid://5dfauhdupy34" path="res://Assets/sounds/Door Open.wav" id="3_5rvts"]
[ext_resource type="AudioStream" uid="uid://ddpsvw2s664ch" path="res://Assets/sounds/Door Close.wav" id="4_p6rhu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i2f2q"]
atlas = ExtResource("2_23i3r")
region = Rect2(0, 1792, 768, 896)

[sub_resource type="SpriteFrames" id="SpriteFrames_r8321"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2f2q")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="Door" type="Area2D"]
z_index = 1
collision_mask = 2
script = ExtResource("1_87ua7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r8321")
autoplay = "default"
frame_progress = 0.492716
offset = Vector2(-131.04, -255.03)

[node name="DoorSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_5rvts")
bus = &"SFX"

[node name="DoorSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_p6rhu")
bus = &"SFX"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(105, -25, 169, 2, 9, 83, -51, 49)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
